feat: logueo y pegada a endpoints con auth
