# swagger.yaml
@@ -15,6 +15,42 @@ servers:
     description: localhost
 
 paths:
+  /auth/login:
+    post:
+      tags:
+        - Auth
+      summary: Login
+      description: Login
+      operationId: Login
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Login"
+      responses:
+        200:
+          description: Login
+          content: 
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/Token'
+          headers:
+            Access-Control-Allow-Origin:
+              schema:
+                type: string
+            Access-Control-Allow-Methods:
+              schema:
+                type: string
+            Access-Control-Allow-Headers:
+              schema:
+                type: string
+        500:
+          description: Error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/Error'
+
   /client:
     #C
     post:
@@ -1208,6 +1244,16 @@ components:
         percent: 
           type: number
           example: 10
+    Login:
+      type: object
+      required: 
+        - email
+        - password
+      properties:
+        email:
+          type: string
+        password:
+          type: string
     Error:
       type: object
       properties:
